--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  textarea:focus,
+  input:focus {
+    outline: none;
+  }
+}
